terraform/09-multiple-ec2-instances/main.tf
provider "aws" {
  region  = "us-east-1"
  version = "~> 2.64"
}

resource "aws_security_group" "http_server_sg" {
  name = "http_server_sg"
  #vpc_id = "vpc-2c080b56"
  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "http_server_sg"
  }

}

resource "aws_default_vpc" "default" {

}

resource "aws_instance" "http_server" {
  #ami                    = "ami-09d95fab7fff3776c"
  count                  = 2
  ami                    = data.aws_ami.aws_linux_2_latest.id
  key_name               = "default-ec2"
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.http_server_sg.id]
  #subnet_id              = "subnet-270bfb78"
  subnet_id = tolist(data.aws_subnet_ids.default_subnets.ids)[0]
  
}
